@@ -2,108 +2,120 @@ package com.sprint.mission.discodeit.repository.file;
 
 import com.sprint.mission.discodeit.entity.UserStatus;
 import com.sprint.mission.discodeit.repository.UserStatusRepository;
+import org.springframework.beans.factory.annotation.Value;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
 
 import java.io.*;
-import java.nio.file.*;
-import java.util.*;
-import java.util.stream.Collectors;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.List;
+import java.util.Optional;
+import java.util.UUID;
 import java.util.stream.Stream;
 
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "file")
+@Repository
 public class FileUserStatusRepository implements UserStatusRepository {
-
-    private final Path directory;
+    private final Path DIRECTORY;
     private final String EXTENSION = ".ser";
 
-    public FileUserStatusRepository(String folderName) {
-        this.directory = Paths.get(System.getProperty("user.dir"), "file-data-map", folderName);
-        try {
-            Files.createDirectories(directory);
-        } catch (IOException e) {
-            throw new RuntimeException("디렉토리 생성 실패", e);
+    public FileUserStatusRepository(
+            @Value("${discodeit.repository.file-directory:data}") String fileDirectory
+    ) {
+        this.DIRECTORY = Paths.get(System.getProperty("user.dir"), fileDirectory, UserStatus.class.getSimpleName());
+        if (Files.notExists(DIRECTORY)) {
+            try {
+                Files.createDirectories(DIRECTORY);
+            } catch (IOException e) {
+                throw new RuntimeException(e);
+            }
         }
     }
 
     private Path resolvePath(UUID id) {
-        return directory.resolve(id.toString() + EXTENSION);
+        return DIRECTORY.resolve(id + EXTENSION);
     }
 
     @Override
-    public UserStatus save(UserStatus status) {
-        final Path path = resolvePath(status.getId());
-        try (ObjectOutputStream oos = new ObjectOutputStream(new FileOutputStream(path.toFile()))) {
-            oos.writeObject(status);
-            return status;
+    public UserStatus save(UserStatus userStatus) {
+        Path path = resolvePath(userStatus.getId());
+        try (
+                FileOutputStream fos = new FileOutputStream(path.toFile());
+                ObjectOutputStream oos = new ObjectOutputStream(fos)
+        ) {
+            oos.writeObject(userStatus);
         } catch (IOException e) {
-            throw new RuntimeException("UserStatus 저장 실패: " + status.getId(), e);
+            throw new RuntimeException(e);
         }
+        return userStatus;
     }
 
     @Override
     public Optional<UserStatus> findById(UUID id) {
-        final Path path = resolvePath(id);
-        if (!Files.exists(path)) return Optional.empty();
-
-        try (ObjectInputStream ois = new ObjectInputStream(new FileInputStream(path.toFile()))) {
-            return Optional.of((UserStatus) ois.readObject());
-        } catch (IOException | ClassNotFoundException e) {
-            throw new RuntimeException("UserStatus 조회 실패: " + id, e);
+        UserStatus userStatusNullable = null;
+        Path path = resolvePath(id);
+        if (Files.exists(path)) {
+            try (
+                    FileInputStream fis = new FileInputStream(path.toFile());
+                    ObjectInputStream ois = new ObjectInputStream(fis)
+            ) {
+                userStatusNullable = (UserStatus) ois.readObject();
+            } catch (IOException | ClassNotFoundException e) {
+                throw new RuntimeException(e);
+            }
         }
+        return Optional.ofNullable(userStatusNullable);
     }
 
     @Override
     public Optional<UserStatus> findByUserId(UUID userId) {
         return findAll().stream()
-                .filter(status -> status.getUserId().equals(userId))
+                .filter(userStatus -> userStatus.getUserId().equals(userId))
                 .findFirst();
     }
 
     @Override
-    public boolean deleteByUserId(UUID userId) {
-        Optional<UserStatus> target = findByUserId(userId);
-        if (target.isEmpty()) return false;
-
-        UUID id = target.get().getId();
-        try {
-            return Files.deleteIfExists(resolvePath(id));
-        } catch (IOException e) {
-            throw new RuntimeException("UserStatus 삭제 실패: " + id, e);
-        }
-    }
-
-    @Override
     public List<UserStatus> findAll() {
-        try (Stream<Path> files = Files.list(directory)) {
-            return files
-                    .filter(p -> p.toString().endsWith(EXTENSION))
+        try (Stream<Path> paths = Files.list(DIRECTORY)) {
+            return paths
+                    .filter(path -> path.toString().endsWith(EXTENSION))
                     .map(path -> {
-                        try (ObjectInputStream ois = new ObjectInputStream(new FileInputStream(path.toFile()))) {
+                        try (
+                                FileInputStream fis = new FileInputStream(path.toFile());
+                                ObjectInputStream ois = new ObjectInputStream(fis)
+                        ) {
                             return (UserStatus) ois.readObject();
                         } catch (IOException | ClassNotFoundException e) {
-                            throw new RuntimeException("UserStatus 전체 조회 중 오류 발생", e);
+                            throw new RuntimeException(e);
                         }
                     })
-                    .collect(Collectors.toList());
+                    .toList();
         } catch (IOException e) {
-            throw new RuntimeException("UserStatus 파일 목록 조회 실패", e);
+            throw new RuntimeException(e);
         }
     }
+
     @Override
     public boolean existsById(UUID id) {
-        return Files.exists(resolvePath(id));
+        Path path = resolvePath(id);
+        return Files.exists(path);
     }
 
     @Override
-    public boolean existsByUserId(UUID userId) {
-        return findAll().stream().anyMatch(status -> status.getUserId().equals(userId));
-    }
-
-    @Override
-    public boolean deleteById(UUID id) {
+    public void deleteById(UUID id) {
+        Path path = resolvePath(id);
         try {
-            return Files.deleteIfExists(resolvePath(id));
+            Files.delete(path);
         } catch (IOException e) {
-            throw new RuntimeException("UserStatus 삭제 실패: " + id, e);
+            throw new RuntimeException(e);
         }
+    }
+
+    @Override
+    public void deleteByUserId(UUID userId) {
+        this.findByUserId(userId)
+                .ifPresent(userStatus -> this.deleteById(userStatus.getId()));
     }
 }
