@@ -2,58 +2,45 @@ package com.sprint.mission.discodeit.repository.jcf;
 
 import com.sprint.mission.discodeit.entity.BinaryContent;
 import com.sprint.mission.discodeit.repository.BinaryContentRepository;
-import org.springframework.context.annotation.Profile;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
 
 import java.util.*;
-import java.util.stream.Collectors;
 
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "jcf", matchIfMissing = true)
 @Repository
 public class JCFBinaryContentRepository implements BinaryContentRepository {
+    private final Map<UUID, BinaryContent> data;
 
-    private final Map<UUID, BinaryContent> storage = new HashMap<>();
+    public JCFBinaryContentRepository() {
+        this.data = new HashMap<>();
+    }
 
     @Override
     public BinaryContent save(BinaryContent binaryContent) {
-        storage.put(binaryContent.getId(), binaryContent);
+        this.data.put(binaryContent.getId(), binaryContent);
         return binaryContent;
     }
 
     @Override
     public Optional<BinaryContent> findById(UUID id) {
-        return Optional.ofNullable(storage.get(id));
-    }
-
-    @Override
-    public List<BinaryContent> findAll() {
-        return new ArrayList<>(storage.values());
+        return Optional.ofNullable(this.data.get(id));
     }
 
     @Override
     public List<BinaryContent> findAllByIdIn(List<UUID> ids) {
-        return ids.stream()
-                .map(storage::get)
-                .filter(Objects::nonNull)
-                .collect(Collectors.toList());
+        return this.data.values().stream()
+                .filter(content -> ids.contains(content.getId()))
+                .toList();
     }
 
     @Override
     public boolean existsById(UUID id) {
-        return storage.containsKey(id);
+        return this.data.containsKey(id);
     }
 
     @Override
-    public boolean deleteById(UUID id) {
-        return storage.remove(id) != null;
-    }
-
-    @Override
-    public void deleteByUserId(UUID userId) {
-        storage.values().removeIf(b -> userId.equals(b.getOwnerId()));
-    }
-
-    @Override
-    public boolean deleteAllByMessageId(UUID messageId) {
-        return false;
+    public void deleteById(UUID id) {
+        this.data.remove(id);
     }
 }
