@@ -2,81 +2,58 @@ package com.sprint.mission.discodeit.repository.jcf;
 
 import com.sprint.mission.discodeit.entity.ReadStatus;
 import com.sprint.mission.discodeit.repository.ReadStatusRepository;
+import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.stereotype.Repository;
 
 import java.util.*;
-import java.util.concurrent.ConcurrentHashMap;
-import java.util.stream.Collectors;
 
-@Repository("JCFReadStatusRepository")
+@ConditionalOnProperty(name = "discodeit.repository.type", havingValue = "jcf", matchIfMissing = true)
+@Repository
 public class JCFReadStatusRepository implements ReadStatusRepository {
+    private final Map<UUID, ReadStatus> data;
 
-    private final Map<UUID, ReadStatus> data = new ConcurrentHashMap<>();
+    public JCFReadStatusRepository() {
+        this.data = new HashMap<>();
+    }
 
     @Override
     public ReadStatus save(ReadStatus readStatus) {
-        data.put(readStatus.getId(), readStatus);
+        this.data.put(readStatus.getId(), readStatus);
         return readStatus;
     }
 
     @Override
     public Optional<ReadStatus> findById(UUID id) {
-        return Optional.ofNullable(data.get(id));
-    }
-
-    @Override
-    public List<ReadStatus> findAll() {
-        return new ArrayList<>(data.values());
+        return Optional.ofNullable(this.data.get(id));
     }
 
     @Override
     public List<ReadStatus> findAllByUserId(UUID userId) {
-        return data.values().stream()
-                .filter(rs -> rs.getUserId().equals(userId))
-                .collect(Collectors.toList());
+        return this.data.values().stream()
+                .filter(readStatus -> readStatus.getUserId().equals(userId))
+                .toList();
     }
 
     @Override
     public List<ReadStatus> findAllByChannelId(UUID channelId) {
-        return data.values().stream()
-                .filter(rs -> rs.getChannelId().equals(channelId))
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public Optional<ReadStatus> findByUserIdAndChannelId(UUID userId, UUID channelId) {
-        return data.values().stream()
-                .filter(rs -> rs.getUserId().equals(userId) && rs.getChannelId().equals(channelId))
-                .findFirst();
+        return this.data.values().stream()
+                .filter(readStatus -> readStatus.getChannelId().equals(channelId))
+                .toList();
     }
 
     @Override
     public boolean existsById(UUID id) {
-        return data.containsKey(id);
+        return this.data.containsKey(id);
     }
 
     @Override
-    public boolean existsByUserIdAndChannelId(UUID userId, UUID channelId) {
-        return findByUserIdAndChannelId(userId, channelId).isPresent();
-    }
-
-    @Override
-    public boolean deleteById(UUID id) {
-        return data.remove(id) != null;
-    }
-
-    @Override
-    public void deleteAllByUserId(UUID userId) {
-        data.values().removeIf(rs -> rs.getUserId().equals(userId));
+    public void deleteById(UUID id) {
+        this.data.remove(id);
     }
 
     @Override
     public void deleteAllByChannelId(UUID channelId) {
-        data.values().removeIf(rs -> rs.getChannelId().equals(channelId));
-    }
-
-    @Override
-    public void deleteAll() {
-        data.clear();
+        this.findAllByChannelId(channelId)
+                .forEach(readStatus -> this.deleteById(readStatus.getId()));
     }
 }
